--- a/english/word/simple-word/markdown/p27-p29.md
+++ b/english/word/simple-word/markdown/p27-p29.md
@@ -12,7 +12,7 @@
     - vt.
         - ...to coach lawyers on the shifting(转移) landscape([ˈlændskeɪp]) for patents([ˈpætnt] 专利). 指导律师们应对不断变化的专利领域
 - theater [ˈθiːətər]
-    - n. 戏剧，剧院 
+    - n. 戏剧，剧院
     - The professional companies prospered in their permanent([ˈpɜːrmənənt]) theaters. 这些专业剧团在他们固定的剧院里兴盛起来
 - backward
     - adj. 向后的； adv. 向后
@@ -21,13 +21,13 @@
     - spr- 迸发
     - spread [spred] v./n. 传播，散布
 - taste
-    - n. 味道；**鉴赏力；品味** vt. 品尝
+    - n. **鉴赏力；品味**；味道 vt. 品尝
     - 品味
         - He has an expensive taste of lifestyle.
     - distasteful adj. 令人讨厌的，令人厌恶的
         - Accepting favors in return for opening doors is "distasteful".
 - via [ˈviːə]
-    - prep. 经由 == by 
+    - prep. 经由 == by
     - The current immigration(移民) system in the US has been fixed via political means(方法).
 - vocabulary
     - n. 词汇量
@@ -35,12 +35,12 @@
 - rude
     - adj. 粗鲁的，不礼貌的
     - crude adj. 粗鲁的，粗糙的； n. 原油，石油
+        - 原油
+            - the price of crude oil
     - rude vs crude
         - rude 定性
         - crude 行为
         - He is a rude man，because his behavior is crude.
-    - 原油
-        - the price of crude oil
 - block
     - n. 大楼；街区；障碍物； vt. 堵塞；阻碍
     - it is a block of sugar.
@@ -64,12 +64,12 @@
     - n. 卡车
     - tra- == tru- 拖着
 - linguist [ˈlɪŋɡwɪst]
-    - n. 语言学家；通晓数国语言的人 
+    - n. 语言学家；通晓数国语言的人
     - lingu- 语言
         - bilingual adj. 双语的 [ˌbaɪˈlɪŋɡwəl]
 - goods
     - n. 商品；货物
-    - commodity 商品
+    - commodity [kəˈmɑːdəti] 商品
     - commodity vs goods
         - commodity 批量生产的
         - goods 高质量
@@ -84,10 +84,11 @@
     - n. 汽车
     - auto- 自动
     - motor/car/**vehicle** [ˈviːəkl ] 汽车
-        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance([kəmˈplaɪəns])</u>. 法规要求汽车公司使他们的车辆符合法规要求
+        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance([kəmˈplaɪəns])</u>.
+          法规要求汽车公司使他们的车辆符合法规要求
             - bring...into compliance 使...符合（规定、标准、法规）
 - alcohol [ˈælkəhɔːl]
-    - n. 酒精；含酒精的饮料 
+    - n. 酒精；含酒精的饮料
 - route
     - n. 路线，路程
     - Think about diving a route that's very familiar.
@@ -95,14 +96,14 @@
 - childless
     - adj. 没有子女的
 - insect [ˈɪnsekt]
-    - n. 昆虫，虫 
+    - n. 昆虫，虫
     - sect- 切
         - section n. 章节
 - mankind
     - n. 人类
 - cast
     - vt. **投射；扔，投掷**；n. **投，抛**；铸型
-    - casting a wistful([ˈwɪstfəl] 智慧的) glance
+    - casting a wistful([ˈwɪstfəl] 智慧的) glance([ɡlæns])
     - cast- 投
 - tag
     - n. 标签，品牌； vt. 给...加标签
@@ -138,7 +139,7 @@
 - bright
     - adj. **明亮的**；鲜艳的；聪明的；有希望的
 - pioneer [ˌpaɪəˈnɪr]
-    - n. **先驱者，创始人**；vt. 开拓 
+    - n. **先驱者，创始人**；vt. 开拓
     - pion- == pin- 针
 - mouth
     - n. 口，嘴巴
@@ -147,12 +148,12 @@
 - surprisingly [sərˈpraɪzɪŋli]
     - adv. 惊人地
 - punish [ˈpʌnɪʃ]
-    - vt. 惩罚，处罚 
+    - vt. 惩罚，处罚
     - Some people were to be punished by imprisonment([ɪmˈprɪznmənt] 监禁) or even death.
 - cartoon
     - n. 漫画；动画片
 - praise [preɪz]
-    - n./vt. 赞美，称赞 
+    - n./vt. 赞美，称赞
         - Japanese education is praised for helping the young climb the social ladder(阶梯).
     - raise [reɪz] 举起，提升
 - slightly
@@ -164,7 +165,7 @@
     - n. 照片，相片
     - picture 图画，照片
 - instrument [ˈɪnstrəmənt]
-    - n. 仪器，器械，工具；乐器 
+    - n. 仪器，器械，工具；乐器
     - stru- 建造
         - structure n. 结构
         - construct v. 构造
@@ -173,7 +174,7 @@
     - 乐器
         - classical instruments 古典乐器
 - valley [ˈvæli]
-    - n. 山谷，溪谷 
+    - n. 山谷，溪谷
     - Silicon([ˈsɪlɪkən]) Valley 硅谷
 - fold
     - n. 褶皱； v. 折叠
@@ -181,12 +182,12 @@
 - flu/influenza
     - n. 流感
     - flow 流
-    - epidemic [ˌepɪˈdemɪk] adj. 流行的；n. 流感 
+    - epidemic [ˌepɪˈdemɪk] adj. 流行的；n. 流感
 - nose
 - surgery
     - n. 外科，外科手术
     - sur- 在..之上
-    - surgeon [ˈsɜːrdʒən] n. 外科医生 
+    - surgeon [ˈsɜːrdʒən] n. 外科医生
 - dose [doʊs]
     - n. 剂量，一剂；一份
         - More than three million doses were to be made available in early October 2009...
@@ -207,29 +208,29 @@
     - n. 门厅；大厅
     - music hall
 - bone [boʊn]
-    - n. 骨，骨骼 
+    - n. 骨，骨骼
 - doom [duːm]
-    - vt. 命定，注定； n. 厄运，劫数 
+    - vt. 命定，注定； n. 厄运，劫数
     - 厄运
         - Policymakers could avoid the forecasted(预测) doom and may even see progress. 政策制定者可能避免预测中的厄运，甚至还能看到进展
     - mood n. 心情，情绪
 - sacrifice [ˈsækrɪfaɪs]
-    - n./vt. 牺牲；献祭 
+    - n./vt. 牺牲；献祭
 - pour [pɔːr]
-    - vt. 倒，灌；注；vi. 倾泻 
+    - vt. 倒，灌；注；vi. 倾泻
     - It never rains but it pours. 祸不单行
     - 全身心投入
         - Imagining you are pouring your heart out to someone.
     - They spend the night <u>pouring cash into(投入大量资金到某个项目、产业或地方)</u> the hotels and restaurants.
       他们整晚把钱花在酒店和餐馆上
 - doubtful [ˈdaʊtfl]
-    - adj. 拿不定主意的，不确定的；怀疑的 
+    - adj. 拿不定主意的，不确定的；怀疑的
     - dou- 两个
         - double
     - doubt n. 怀疑
     - 出现在阅读题的作者态度题中是必错选项
 - disaster [dɪˈzæstər]
-    - n. 灾难，大祸 
+    - n. 灾难，大祸
 - tourist
     - n. 旅游者，观光者
     - tour v. 旅游，游历
@@ -254,7 +255,7 @@
         - He used the weapons(['wepənz] 武器) to arm his men.
 - phase
     - n. 阶段，时期；
-    - phase == period 时期
+    - phase == period [ˈpɪriəd] 时期
     - in this overwhelming(极大的、巨大的、压倒性的) significant(重要的) phase
 - shame
     - n. 羞耻；可耻的人或事
@@ -283,7 +284,7 @@
     - n. **乐队；带**；vt. 用带绑扎
     - band-aid 邦迪创可贴；临时补救
 - solely [ˈsoʊlli]
-    - adv. 仅；只；唯；单独地 
+    - adv. 仅；只；唯；单独地
     - sol- 太阳，独自
         - solar adj. 太阳的
     - Few Americans <u>attribute</u> this solely <u>to</u> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
@@ -305,6 +306,7 @@
     - strawberry([ˈstrɔːberi]) jam 草莓果酱
     - 将...塞入
         - He jammed the boxes into the back of the car.
+    - gum n. 口香糖
 - openly
     - adv. 公开地
 - environmentalist
@@ -321,7 +323,7 @@
 - headline
     - n. 标题，大字标题
 - plenty [ˈplenti]
-    - n. 丰富，大量 
+    - n. 丰富，大量
     - ple- == plen- == plet- == pli- == full/fill 满，填满
         - complete
     - plenty of 大量的 + 可数n./不可数n.
@@ -346,20 +348,20 @@
     - sure adv./adj. 确定的，一定的
         - I'm sure you"ll get there in the end.
 - worm [wɜːrm]
-    - n. 虫；蠕虫 
+    - n. 虫；蠕虫
 - shopper
 - video
     - n. 录像，录像机
     - radio 收音机
 - prison [ˈprɪzn]
-    - n. 监狱 
+    - n. 监狱
     - imprison n. 囚禁
     - prisoner n. 囚犯
 - greenhouse
     - n. 温室，暖房
     - White House 白宫
 - straight [streɪt]
-    - adj. 直的，正直的； adv. 直接的 
+    - adj. 直的，正直的； adv. 直接的
     - str- 长长的
         - street
     - His explanation([ˌekspləˈneɪʃn] 解释) was surprisingly([sərˈpraɪzɪŋli]) straight up.
@@ -385,7 +387,8 @@
     - adv. 相似地；类似地
     - similar adj. 相似的，类似的
         - be similar to 类似于
-        - The bills(法案) <u>are similar to</u> a measure[ˈmeʒər] recently adopted(采纳) in California. 这些法案与加州最近采纳的一项措施相似
+        - The bills(法案) <u>are similar to</u> a measure[ˈmeʒər] recently adopted(采纳) in California.
+          这些法案与加州最近采纳的一项措施相似
     - similarity n. 相似，类似
 - bottle
     - n. 瓶子
@@ -398,17 +401,18 @@
     - n. 校园
     - school n. 学校
 - lest [lest]
-    - conj. 唯恐，免得 
+    - conj. 唯恐，免得
     - lest == for fear that == in case
         - 在完形填空中一般是错误选项
-    - They should be quick to respond to letters to the editor，lest animals rights misinformation([ˌmɪsɪnfə'meɪʃn] 误传) go unchallenged.
+    - They should be quick to respond to letters to the editor，lest animals rights misinformation([ˌmɪsɪnfə'meɪʃn] 误传)
+      go unchallenged.
       他们应该迅速回复给编辑的来信，以免动物权利方面的错误信息无人质疑
 - chicken
     - n. 小鸡，肌肉
     - hen n. 母鸡
     - cock n. 公鸡
 - fierce [fɪrs]
-    - adj. 凶猛的；猛烈的；狂暴的 
+    - adj. 凶猛的；猛烈的；狂暴的
     - fierce competition 激烈的竞争
 - joy
     - n. 喜悦，乐事
@@ -429,11 +433,11 @@
     - n. 神话
     - <u>They perpetuate([pərˈpetʃueɪt] 他们使...延续/维持/长久存在)</u> the myth of the lone genius.
 - cotton [ˈkɑːtn]
-    - n. 棉花；棉线 
+    - n. 棉花；棉线
     - Adam Davidson relates(叙述) a joke from <u>cotton country(美国)</u>.
 - unrealistic
     - adj. 不切实际的；不真实的
-- insecurity
+- insecurity [ˌɪnsɪˈkjʊrɪti]
     - n. 不安全，危险，不可控
     - security [sɪˈkjʊrəti] n. 安全；安全工作
         - 安全 security == safety
