--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -7,7 +7,7 @@
     - latter adj. 后者的 n. 后者
     - lately adv. 最近，不久前: Researchers lately have begun to extend(表达) that forecast.
 - future
-    - pl. 期货 
+    - pl. 期货
 - why
 - price
     - vt. 给...定价: Their products were re-priced.
@@ -15,7 +15,7 @@
 - language
 - young
     - youngster n. 青年，年轻人
-- among
+- among [əˈmʌŋ]
     - prep. 在...之中(三者及以上): The money was distributed among four schools in the area.
 - food
 - cause
@@ -27,14 +27,15 @@
     - interest group 利益集团
     - group dynamic 群体动力
 - house
-    - House 众议院 vs Senate 参议院: Legislation is moving through the House.
+    - House 众议院 vs Senate [ˈsenət] 参议院: Legislation is moving through the House.
     - vt. 给...房子住: The building has housed some of the nation's most significant diplomats...
 - build
     - built, built
     - building n.
 - small
 - try
-    - try to do 尝试做某事，尚未取得成功: try to wake up just enough to control the course of bad dreams.
+    - try to do 尝试做某事，尚未取得成功: try to wake up just enough to control <u>the course of bad dreams(
+      噩梦的发展过程、走向)</u>.
 - city
 - better
     - good/well, better, best
@@ -51,7 +52,8 @@
 - put
     - put, put, putting
     - as sb. put it 正如某人所说
-    - put forward 提出: Herbert Spencer put forward his own theory of biological and cultural evolution.
+    - put forward 提出: Herbert Spencer put forward his own theory([ˈθiːəri] n. 学说; 理论) of biological and cultural
+      evolution.
     - put down 记下，放下，归因于
         - Danny put down his glass.
         - The former has been put down to social effects.
@@ -75,7 +77,7 @@
 - three
 - below
 - book
-    - vt. 预定: It will not fear of booking losses.
+    - vt. 预定: It will not fear of booking losses([lɔːs] n. 损失).
 - selfish
     - adj. 自私的，利己的
 - spend
@@ -87,14 +89,15 @@
     - skilled adj. 熟练的
         - be skilled at 熟练于
 - always
-- lose
+- lose [luːz]
     - lost, lost, losing
     - lose sleep 对...焦虑: One more reason not to lose sleep over the rise in oil prices.
     - lose concentration 走神: lose concentration on the driving
     - loss n. (class, chess, boss) 丧失，损失
     - loser n. 败者，输者
 - role
-    - play a role in 在...方面: Foreign bureaus(外国办事处) play a crucial role in the newspaper business.
+    - play a role in 在...方面: Foreign bureaus(外国办事处) play a crucial([ˈkruːʃl] adj. 至关重要的，关键性的) role in
+      the newspaper business.
 - college
 - essay
     - n. 散文: Write an essay of 160-200 words based on the following drawing.
@@ -107,7 +110,7 @@
     - adj. 沮丧的: without feeling guilty and without letting the other participants down.
 - hard
     - adj./adv. 坚硬的，坚实的: but have no hard scientific proof.
-    - **adj./adv. 困难的**: Getting established is harder for the young.
+    - **adj./adv. 困难的**: Getting established([ɪˈstæblɪʃ] v. 创建) is harder for the young.
     - **adj./adv. 努力的**: Everyone should try hand to promote social justice.
     - adj./adv. 猛烈的: But because hard laughter is difficult to maintain...
 - play
@@ -128,17 +131,17 @@
 - open
     - openly adv. 公开的
     - openness n. 率真，坦率
-- **though**
+- **though** [ðoʊ]
     - conj. 尽管，虽然(在主句前补充“但是”): Though it is sunny, it is cold.
-      - although conj. 尽管，虽然
+        - although conj. 尽管，虽然
     - adv. 可是，然而(只用于句末，使用逗号隔开): Such programs do not have to negatively affect the environment, though.
 - under
 - name
     - vt. 提名: The likelihood of being named also increases.
 - class
-    - n. 课程(一节课，course 一门课, curriculum 完整课程体系)
+    - n. 课程(一节课，course 一门课, curriculum [kəˈrɪkjələm] 完整课程体系)
     - **n. 阶级，等级**: social class, middle class
-    - **v. 分等级**: It can hardly be classed as Literature.
+    - **v. 分等级**: It can hardly be classed as Literature([ˈlɪtrətʃər] n. 文学; 著作).
     - classic adj. 典型的 n. 典型: a classic case of "paralysis by analysis"
     - classical adj. 经典的，古典的: It has been the talk of the classical-music world.
 - low
@@ -148,7 +151,7 @@
     - num. 百万
     - billion num. 十亿
     - thousand num. 千
-            - 1(billion),000(million),000(thousand),000
+        - 1(billion),000(million),000(thousand),000
 - begin
     - 时间上开始
     - begin, began, begun(run, ran, run)
@@ -160,7 +163,7 @@
         - talk to/with sb.
     - say v. 及物动词
     - talkative adj. 多嘴的，爱多说话的(消极的)
-        - articulate adj. 善于表达的(积极的)
+        - articulate [ɑːrˈtɪkjuleɪt] adj. 善于表达的(积极的)
     - talker n. 说话的人
 - win
 - happen
@@ -170,7 +173,7 @@
 - ago
 - carefully
 - kid
-- unite
+- unite [juˈnaɪt]
     - v. (使)联合，团结: United we stand, divided we fall.
 - enough
     - 前面+adj.后面+n.(前行候命): enough food,
@@ -185,14 +188,15 @@
     - bought, bought
 - draw
     - vt. 拖，拉:
-    - vt. 吸引（注意等） 
-        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in science.
+    - vt. 吸引（注意等）
+        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in
+          science.
 - easy
     - adj. 安逸的
         - uneasy 不安
 - goal
 - never
-- period
+- period [ˈpɪriəd]
     - n. （一段）时间，时期: the gap (between the medieval and modern periods) had been bridged.
 - until
     - prep./conj.: Grammar, punctuation, and spelling can wait until you reverse.
@@ -201,14 +205,15 @@
     - take care of 照顾，照料: It's the hardest thing to take care of a teenage.
     - care about/for 关心: We both care about/for needy workers.
     - medical care 医疗保健
-    - careful, carefully, 
+    - careful, carefully,
     - careless adj. 漠不关心的
 - close
     - adj. 亲密的，亲近的: Helping you feel close and connected to people you care about... 帮助您与所关心的人建立亲密联系...
     - closely adv. 接近地
 - complete
     - vt.: IQ tests ask you to complete verbal and visual analogies(类比). 智力测试要求你完成语言和视觉类比
-    - adj. 完整的，完成的: But the intention is not to neglect social science; rather, the complete opposite. 但我们的意图并不是忽视社会科学，而是完全相反。
+    - adj. 完整的，完成的: But the intention is not to neglect social science; rather, the complete opposite.
+      但我们的意图并不是忽视社会科学，而是完全相反。
 - decade
     - n. 十年
     - the better part of a decade 七八年
@@ -217,12 +222,13 @@
     - vt.: Aggressiveness(进取) better meets challenges.
 - modern
 - my
-- theory
+- theory [ˈθiːəri]
     - theme + story
-    - n.: There are no good theories explaining what consciousness(意识) actually is and how you could ever build a machine to ge there.
+    - n.: There are no good theories explaining what consciousness(意识) actually is and how you could ever build a
+      machine to ge there.
 - friend
 - letter
-- machine
+- machine [məˈʃiːn]
 - newspaper
 - tell
     - told, told
@@ -272,7 +278,7 @@
         - an ever-growing number of 越来越多的 + 可数n.
             - an ever-growing amount of 越来越多的 + 不可数n.
         - **(a/an + n.单/)n.复 of B: 一些，一系列地**
-            - a lot of 
+            - a lot of
             - a dozen of
             - a chunk of
             - a succession of
@@ -291,7 +297,8 @@
     - a lot of
 - sentence
     - n. 句子，判决
-    - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on that day.
+    - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on
+      that day.
 - recent
     - adj.: This is why repeated measures(措施, [ˈmeʒər]) have failed in recent years.
     - recently adv. 最近
