feat: add 012 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -147,4 +147,14 @@ Dear Paul,<br>
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
 
+## 012
+
+Dear Paul,<br>
+&emsp;&emsp;&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in Peking University, one of the top two universities in China.<br>
+&emsp;&emsp;&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of Peking-the first national comprehensive university in modern China. For over a century, she had contributed to the development of China and the change of the destiny of its people. As China's leading higher education institution for teaching and researching, Peking University enjoys an excellent academic reputation, attracting top scholars and students from China and all over the world.
+&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua University as your best choices. Your resume and application letter play a vital role in application. Looking forward to your reply.
+
+<p align="right">Yours,</p>
+<p align="right">Li Ming</p>
+
 
