--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -206,7 +206,7 @@
     - Many people scored worse on measures[ˈmeʒər] of fluid intelligence. 许多人在流体智力方面的得分更差。
 - size
     - n. 尺寸，大小
-    - assiss 评估
+    - assiss 评估 （现写assess）
     - oversize
 - wide
     - adj. 宽阔的；广泛的； adv. 尽可能远的
@@ -303,7 +303,7 @@
     - n. 样貌；方面 [ˈæspekt]
     - First，scientific work(研究) <u>tends to(往往)</u> focus on some aspect of prevailing(盛行的) knowledge...
     - facade n. 外表; 虚伪，假象
-      - Facade Pattern 门面模式
+        - Facade Pattern 门面模式
 - farm
     - n. 农场
     - farmer n. 农场主，农民
@@ -346,7 +346,7 @@
 - near
     - adv. 近，在近处（可以指时间，空间，程度）
 - net
-    - n. 网； vt. 净赚； adj. 净的，纯的(remaining after all deductions(扣除))
+    - n. 网； vt. **净赚**； adj. 净的，纯的(remaining after all deductions(扣除))
     - 净赚（扣除所有成本）
         - It reported a net loss of $5.6 billion.
 - noise
