--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -1,7 +1,9 @@
 # P9-P11
 
 - difficult
-    - difficulty n.
+    - fic 做
+    - adj. 难懂的 
+    - difficulty n.困难，难事
 - digital
     - adj. 数字的，数码的 [ˈdɪdʒɪtl]: digital device 
     - digit n. 数字，**数位**（7位数）
@@ -10,22 +12,31 @@
         - The <u>number/amount/digit</u> of experiments is increasing.
 - fast
 - return
-    - 归还: Accepting favors(好处) in return for opening doors is "distasteful(令人厌恶的)".
-    - 恢复: Train services have returned to normal after the strike of the flu.
-    - n. pl. returns 收益: concrete returns for gift-givers
-- toward
-    - prep. 向，朝
+    - re- 一再；相反；往回
+    - vi.返回；
+    - n.返回，归还
+        - Accepting favors in return for opening doors is “distasteful”（令人厌恶的）.
+            - in return for 作为对...的回报
+    - vi. 恢复
+        - Train services have returned to normal after the strike of the flu（流感）.
+    - n.(常pl)收益，盈利
+        - concrete（具体的） returns for gift-givers
+- toward（s）
+    - （强调方向，动态感）向，朝
 - earth
-    - n. 地球: The Earth was at the centre of our universe.
-    - n. 陆地，地面: The apple fell down toward the earth.
+    - n. 地球（前边加定冠词）: The Earth was at the centre of our universe.
+    - n. 陆地，地面（特指时加定冠词）: The apple fell down toward the earth.
     - n. 土
 - happiness
     - n. 幸福
+    - delight n.快乐
+    - gratification n.快乐
 - loss [lɔːs]
 - poor
-    - adj. 贫乏的: People are, on the whole, poor at considering background information.
+    - adj. 贫乏的: 
         - People are, on the whole, poor at considering protecting the environment. 总体而言，人们对保护环境的考虑还不够
         - on the whole 总体而言（插入语）
+        - **poor at considering**在某个方面贫乏考虑
     - poorly adv. 糟糕地，不如意
 - actual 
     - adj. 实际的
@@ -36,9 +47,15 @@
     - far away 在远处
 - five
 - picture
-    - describe the pictures briefly(简要地)
-    - n. 局面: For younger families, the picture is not any better.
-    - v.: The overweight are sometimes pictured in the media with their faces covered.
+    - pic- 描绘
+    - n.图片，照片；局面
+    - depict v.描绘
+    - 图片
+        - describe the pictures briefly（简短的）
+    - 局面
+        - For younger families，the picture is not any better.
+    - vt.拍照
+        - The overweight are sometimes pictured in the media with their faces covered.
 - run
     - vt. 经营，管理，运行: Permission to run a nuclear plant(核电厂) is a public trust.
     - ran, run, running
@@ -47,6 +64,8 @@
     - n. 顶部，上部
     - on **the** top
 - war
+    - 词根：保护
+    - n.战争，斗争
 - driver
 - music
 - office
@@ -61,6 +80,7 @@
     - adj. 坚强的: strong woman
     - adj. 强烈的: strong feeling
 - tax
+    - n.税收 v.对...征税
 - thus
     - therefore, so 因此
 - whose
@@ -77,14 +97,19 @@
     - n. 差距: There is a gap in working-class jobs.
     - gap year
 - journal
+    - j 记 + our 我们 + nal 哪里
     - n. 杂志，期刊 [ˈdʒɜːrnl]
 - neatly
     - adv. 整洁的，干净的: You should write neatly on the ANSWER SHEET.
+    - neat adj.整洁的
 - next
 - already
-    - adv. 早已，已经: The French measures[ˈmeʒər] have already. 法国的措施已经生效
-    - still 仍然(正在做，进程中): I am still doing my homework.
-    - yet adv. 还，尚未 conj. 然而，但是(还没有开始): I have not done my homework yet.
+    - adv.早已，已经（事情已经完成）
+        - The French measures have already failed. 法国的措施已经生效
+    - still （事情持续进行）
+        - I'm still doing my homework.
+    - yet(事情还没发生)尚未（一般用于否定句和疑问句）
+        - I haven’t done my homework yet.
 - bank
     - banker n. 银行家
 - hand
@@ -94,6 +119,7 @@
 - middle
 - outside
 - reach
+    - vt.到达，抵达; vi.伸出手；达到，延伸；
     - vt. 触达: Influential have more channels to reach the public(公众). 
     - vi. 到达: We reach for them mindlessly.
     - n. 范围: expanded the reach of science.
@@ -102,17 +128,18 @@
     - adv. 
     - simple adj. 
 - stand
-    - vi. 站立
+    - vi. 站立；n.立场 vt.容忍
     - n. 立场: political stand 
 - stop
 - training
+    - tra-拖着
     - n. 训练，培养
     - train n. 火车 v. 训练，培养
 - action
 - beyond
     - prep. 越出，远于: It is essential to consider factors beyond GDP. 必须考虑GDP以外的因素
 - full 
-    - adj. 
+    - adj. 满的；完全的
     - fill v. 填满
     - empty, full
     - fully adv. 完全地，全部地
@@ -134,10 +161,15 @@
     - speaker n. 演讲者，扬声器
 - water
 - act
-    - n. 法令: twenty-seven Acts of Parliament(国会) govern this field...
+    - vi.行动 n.法令
+    - 法案
+        - twenty-seven Acts of Parliament(国会) this field...
+        - parley 会议
+        - party 聚会
 - bad
 - clearly
-    - adv. 清楚地
+    - adv.清楚地；明白地
+    - clear adj.清楚的 v.使...清楚
 - forget 
     - you forget to pause and appreciate the things you have. 你忘记了停下来欣赏你所拥有的东西
 - general
@@ -150,13 +182,23 @@
     - vt. 强调，使突出: President Trump had underline <u>fossil fuels(化石燃料)</u>.
     - vt. 下划线: The underline sentence (Para.1) most probably shows that the court.
 - record
-    - accord v. 自愿
-    - n.: a company's record in CSR.
-    - v.: record sales on the cash register.
+    - re-一再  cord 心
+    - n.记录 v.记录；录音
+    - accord v.自愿；一致；符合
+    - n.记录
+        - a company's record in CSR
+    - v.记录
+        - ...record sales on a cash register
 - everyone
 - land
     - n. 陆地
 - message
+    - miss- 送
+        - mission n.使命；天职
+        - Permission n.允许；许可
+        - admission n.承认
+        - submission n.提交
+    - n.信息
 - plant
     - n. 工厂，植物: nuclear power plant 核电厂
     - vt. 种植: People may clear land to plant more rice.
@@ -166,40 +208,53 @@
     - n. 药物 [drʌɡ]
     - n. 毒品, 与 alcohol(酒精)/tobacco(烟草) 连用
         - Many homeless adults are addicted to alcohol or drug.
+            - be addicted to 对...上瘾
 - event
-    - n. 事件，大事 a thing that happens, especially sth **important**
+    - n. 事件，大事 （= affair） a thing that happens, especially sth **important**
     - event vs affair vs incident 事件
         - affair 同event
         - incident: sth that happens, especially sth unusual or **unpleasant**
 - here
 - lever
+    - lev-举；轻
     - n. 杠杆 
     - vt. 撬动
     - Give me a lever and I will lever the earth.
 - model
+    - n.模特；模型
     - He turned from a problem child into a model student.
 - receive
+    - vt.接收，收到；接见
+    - ceive-拿；抓
+        - deceive 欺骗
+        - perceive 察觉；理解
+        - conceive 构想；构思
 - sometimes
     - adv. 有时，间或: Sometimes the heart is smarter than the head.
     - sometime adv. 某个时候 adj. 以前的
         - sometime in the future
 - step
+    - n.步；脚步；步骤，措施
     - n. 措施: take some steps to address(解决) our urgent housing need.
 - task
     - There are a lot of tasks to be done.
 - user
 - practice/practise
-    - n. 练习
-    - n. 实践: This practice does not address the real worry.
+    - n.实践；行为；练习
+        - 行为
+            - This practice dose not address the real worry.
 - fear
     - n. 恐惧
     - vt. 害怕: They fear losing control of Mauna Kea.
 - foreign
+    - fore-门
     - adj. 外国的 [ˈfɔːrən]
     - foreigner n. 外国人
 - within
     - prep. 在（某段距离）之间，在（某段时间）之内
     - 同 in
+    - in 肯定，确定的状态
+    - within 表示推测
 - carbon
     - n. 碳
     - carbon dioxide 二氧化碳
@@ -209,7 +264,8 @@
     - hourly adj. 每小时的
 - moment
     - n. 时刻，瞬间: Think about the present moment.
-    - take a moment 花些时间: We can take a moment before buying.
+    - take a moment 花一段时间
+        - We can take a moment before buying.
 - nearly
     - adv. 几乎，差不多
 - nothing
@@ -222,6 +278,7 @@
     - on one side 一方面
     - on another side 另一方面
 - town
+    - n.镇，市镇；市区；市中心
     - downtown n. 市中心
 - above
     - prep. 在...上方
@@ -233,12 +290,16 @@
 - along
     - prep. 沿着: go along this road
 - behind
+    - hind-在...之后
+        - hinder 阻碍
     - prep. 在..后面，落后于
 - death
     - n. 死亡
     - die
     - dying n. 濒临死亡: modern medicine has prolonged the physical agony of dying.
 - doctor
+    - doc=duc 引导
+    - n.医生；博士
     - doctor degree([dɪˈɡriː]) 博士学位
     - Dr. Song
 - gain
@@ -264,6 +325,9 @@
     - adj. 合理的，健全的: The court's ruling is legally sound. 法院的裁决在法律上是合理的
 - sport
 - television/TV
+    - n.电视机
+    - tele-电
+    - vis-看
 - therefore
     - adv. 因此: Therefore, it is important to study(研究) humans.
 - usually
@@ -273,17 +337,19 @@
     - adj. 全部的，全体的，完整的
     - n. 全部，全体
     - wholesale n. 批发
+    - holy adj.神圣的
 - across
-    - prep. 穿过，横过
-    - adv. 在对面
-    - cross v. 
-    - Look left and right before you across/cross the road.
-    - It helps spread Hawaiian culture across/cross the world.
+    - prep.穿过，在...对面 adv.横过
+        - It helps spread Hawaiian culture across the world.
+    - cross v.穿过
+        - Look left and right before you cross the road.
 - actually
 - billion
 - else
+    - adv.其他，另外
     - 只能放在不定代词(sb./anybody/anyone)和特殊疑问词后: Everybody else loses.
 - hear
+    - vt.听见；听说
     - hear from 收到...的信: I am looking forward to hearing from you.
     - hear about/of 听说: What's this I hear about you getting married?
 - daily
@@ -292,13 +358,19 @@
     - adj. 应得的，应支付的: Information protection should be given due attention. 信息保护应得到应有的重视
     - **due to == because of 由于**: a rise in airline travel due to the improving economy and low oil price. 经济好转和油价低迷导致航空旅行增加
 - key
-    - The key to reforming(改革) higher education(高等教育)...
-    - adj. 主要的
-    - vt.: key in 键入
-        - lets visitors key in job criteria.
+    - n.钥匙；关键；键；adj.主要的 vt.键入数据等（key in）
+    - 关键
+        - The key to reforming（改革）higher education...
+    - 输入，键入
+        - ...lets visitors key in job criteria（工作标准）
 - material
-    - n. 材料，原料，素材: They were built with materials popular at that time. 它们是用当时流行的材料建造的
-    - adj. 物质的，重要的: Satisfaction with these material purchases wears off fairly quickly.
+    - n.材料；原料； adj.物质的；重要的；实质性的
+    - n.材料；原料
+        - They were built with materials popular at that time.它们是用当时流行的材料建造的
+    - adj.物质的
+        - satisfaction with these material purchases wears off fairly quickly.
+            - wear off 逐渐消失；消散
+    - pattern 模式
 - push
 - shop
 - slow
@@ -310,5 +382,7 @@
         - neither 两者都不
 - mother
 - surprise
+    - prise-抓
+        - prison 监狱
     - surprisingly adv. 惊人地
 - writer
