--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -257,8 +257,8 @@
     - The gardens of the homeless <u>introduce from into</u> an urban environment. 无家可归者的花园将人们引入城市环境
         - introduce sth. into 把...引进到
 - baby
-- dioxide
-    - n. 二氧化碳 [daɪˈɑːksaɪd]
+- dioxide [daɪˈɑːksaɪd]
+    - n. 二氧化碳
     - **carbon dioxide**
 - eventually
     - adv. 最后地
