--- a/english/word/simple-word/markdown/p30-p32.md
+++ b/english/word/simple-word/markdown/p30-p32.md
@@ -8,7 +8,7 @@
 - convenient
     - adj. 方便的，便利的，近处的
     - con- 共同
-    - The credit card enables its owner to obtain(获得) more convenient services than other people do.
+    - The credit card enables its owner to obtain([əbˈteɪn] 获得) more convenient services than other people do.
     - convenience n. 方便
 - postwar
     - adj. 战后的
@@ -59,7 +59,7 @@
         - summer camp 夏令营
 - lag [læɡ]
     - vi. 拖后腿，走得慢 
-    - Graduates from elite(精英) universities tend to lag behind the others <u>due to(由于)</u> decreased opportunities.
+    - Graduates from elite([ɪˈliːt] 精英) universities tend to lag behind the others <u>due to(由于)</u> decreased opportunities.
     - leg n. 腿
 - loser
 - coal [koʊl]
@@ -73,7 +73,7 @@
     - v. 重组，整顿
     - organize v. 组织；安排
         - work -> ork- == org- 和工作有关
-- dirt
+- dirt [dɜːrt]
     - n. 尘土，污垢；丑闻，丑事
     - 穿上shirt(衬衫)，脱下skirt(裙子)，扔进dirt(尘土)
 - shall
@@ -163,10 +163,10 @@
     - adj. 患病的；想吐的；腻烦的；厌恶的(sick of)
     - 生病的
         - A warm embrace(拥抱 == hug) might even help you avoid getting sick this winter.
-- circle
+- circle [ˈsɜːrkl]
     - n. 圆圈；**圈子，界**；vt. 围绕，环绕
     - circ- 圈；环
-        - circuit v. 巡回审判
+        - circuit [ˈsɜːrkɪt] v. 巡回审判
         - circular adj. 圆圈的，环的
     - You may have a circle of friends...
 - whenever
@@ -189,7 +189,9 @@
 - personnel [ˌpɜːrsəˈnel]
     - n. 人员，**员工**；人事部门 
     - ~~a/an personnel~~
-- servant
+    - personal adj. 个人的
+    - personally adv. 在个人看来
+- servant [ˈsɜːrvənt]
     - n. 仆人
     - serv- 服务，保留
 - alive
@@ -201,15 +203,15 @@
         - quarter 四分之一 [ˈkwɔːrtər]
     - 平方
         - BMI equals <u>body mass(体重)</u> <u>divided by(除以)</u> the square of height.
-- fifth
+- fifth [fɪfθ]
 - honest
     - adj. 诚信的，正直的
     - If you're not sure，ask for honest feedback from trusted friends.
     - dishonest adj. 不诚实的；骗人的；欺骗性的
     - honestly adv. 诚实地；正当地
-- poll
+- poll [poʊl]
     - n. 民意测验；选举投票
-    - pull v. 拉 
+    - pull [pʊl] v. 拉 
 - youth [juːθ]
     - n. 青春，青少年时代(不可数)；青年(可数) 
     - lead more youths into criminal([ˈkrɪmɪnl]) behavior
@@ -228,7 +230,7 @@
     - pron. 我的； n. 矿山；地雷； vt. 开矿；在...布雷
     - He works at the mine.
     - undermine v. 破坏
-        - Providing too little security undermines public support.
+        - Providing too little security([sɪˈkjʊrəti]) undermines public support.
 - ring
     - n. 戒指；**环；铃声**；打电话
 - son
@@ -283,7 +285,7 @@
     - n. 猎人；狩猎者 
     - **headhunter** n. 猎头
     - hurt v./n. 受伤
-    - hunt v. 打猎
+    - hunt [hʌnt] v. 打猎
 - tap
     - vt. **开采，打开** 轻拍；利用； 窃听 n. 轻拍；龙头；窃听 vi. 轻拍
     - 开采，打开
