--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -1,31 +1,33 @@
 # P9-P11
 
 - difficult
+    - adj. 难懂的
     - fic 做
-    - adj. 难懂的 
-    - difficulty n.困难，难事
-- digital
-    - adj. 数字的，数码的 [ˈdɪdʒɪtl]: digital device 
+    - difficulty [ˈdɪfɪkəlti] n. 困难，难事
+- digital [ˈdɪdʒɪtl]
+    - adj. 数字的，数码的: digital device
     - digit n. 数字，**数位**（7位数）
-        - number 数量(可数n.)         
+        - number 数量(可数n.)
         - amount 数量(不可数n.)
         - The <u>number/amount/digit</u> of experiments is increasing.
 - fast
 - return
-    - re- 一再；相反；往回
-    - vi.返回；
-    - n.返回，归还
-        - Accepting favors in return for opening doors is “distasteful”（令人厌恶的）.
+    - vi. 返回；
+    - n. 返回，归还
+        - Accepting favors <u>in return for</u> opening doors is "distasteful"(令人厌恶的).
             - in return for 作为对...的回报
     - vi. 恢复
-        - Train services have returned to normal after the strike of the flu（流感）.
-    - n.(常pl)收益，盈利
-        - concrete（具体的） returns for gift-givers
-- toward（s）
+        - Train services have returned to normal after the strike of the flu(流感).
+    - n. (常pl)收益，盈利
+        - concrete(具体的) returns for gift-givers
+    - re- 一再；相反；往回
+- toward(s)
     - （强调方向，动态感）向，朝
 - earth
-    - n. 地球（前边加定冠词）: The Earth was at the centre of our universe.
-    - n. 陆地，地面（特指时加定冠词）: The apple fell down toward the earth.
+    - n. 地球（前边加定冠词）
+        - The Earth was at the centre of our universe.
+    - n. 陆地，地面（特指时加定冠词）
+        - The apple fell down toward the earth.
     - n. 土
 - happiness
     - n. 幸福
@@ -33,12 +35,12 @@
     - gratification n.快乐
 - loss [lɔːs]
 - poor
-    - adj. 贫乏的: 
+    - adj. 贫乏的
         - People are, on the whole, poor at considering protecting the environment. 总体而言，人们对保护环境的考虑还不够
         - on the whole 总体而言（插入语）
         - **poor at considering**在某个方面贫乏考虑
     - poorly adv. 糟糕地，不如意
-- actual 
+- actual
     - adj. 实际的
     - actually adv. 的确，事实上
     - The actual/actually population is increasing much faster.
@@ -47,32 +49,33 @@
     - far away 在远处
 - five
 - picture
+    - n. 图片，照片；局面
     - pic- 描绘
-    - n.图片，照片；局面
     - depict v.描绘
     - 图片
-        - describe the pictures briefly（简短的）
+        - describe the pictures briefly(简短的)
     - 局面
         - For younger families，the picture is not any better.
     - vt.拍照
         - The overweight are sometimes pictured in the media with their faces covered.
 - run
-    - vt. 经营，管理，运行: Permission to run a nuclear plant(核电厂) is a public trust.
+    - vt. 经营，管理，运行
+        - Permission to run a nuclear plant(核电厂) is a public trust.
     - ran, run, running
-    - runner 
+    - runner
 - top
     - n. 顶部，上部
     - on **the** top
 - war
-    - 词根：保护
     - n.战争，斗争
+    - 词根：保护
 - driver
 - music
 - office
     - n. 处，所，局，官职
     - officer n. 官员，*高级*职员: state officers
-    - official 
-        - adj. 官方的: maintain Catholicism(天主教) as the official religion.
+    - official
+        - adj. 官方的: maintain Catholicism(天主教) as the official religion([rɪˈlɪdʒən]).
         - n. 官员: Official must not be allowed to play favorites. 官员不得偏袒
     - officially adv. 正式地，官方地
 - short
@@ -80,14 +83,14 @@
     - adj. 坚强的: strong woman
     - adj. 强烈的: strong feeling
 - tax
-    - n.税收 v.对...征税
+    - n. 税收 v.对...征税
 - thus
     - therefore, so 因此
 - whose
 - dream
 - free
     - adj. 免费的
-    - 作为尾缀表没有: 
+    - 作为尾缀表没有:
         - work-free world 没有工作的世界
         - smoking-free 无烟区
     - freedom n. 自由
@@ -96,19 +99,20 @@
     - n. 空白: to fit into each of numbered gaps
     - n. 差距: There is a gap in working-class jobs.
     - gap year
-- journal
+- journal [ˈdʒɜːrnl]
+    - n. 杂志，期刊
     - j 记 + our 我们 + nal 哪里
-    - n. 杂志，期刊 [ˈdʒɜːrnl]
-- neatly
-    - adv. 整洁的，干净的: You should write neatly on the ANSWER SHEET.
+- neatly [ˈnitlɪ]
+    - adv. 整洁的，干净的:
+        - You should write neatly on the ANSWER SHEET.
     - neat adj.整洁的
 - next
 - already
-    - adv.早已，已经（事情已经完成）
-        - The French measures have already failed. 法国的措施已经生效
-    - still （事情持续进行）
+    - adv. 早已，已经(事情已经完成)
+        - The French measures([ˈmeʒərz]) have already failed. 法国的措施已经生效
+    - still (事情持续进行)
         - I'm still doing my homework.
-    - yet(事情还没发生)尚未（一般用于否定句和疑问句）
+    - yet (事情还没发生)尚未(一般用于否定句和疑问句)
         - I haven’t done my homework yet.
 - bank
     - banker n. 银行家
@@ -120,25 +124,26 @@
 - outside
 - reach
     - vt.到达，抵达; vi.伸出手；达到，延伸；
-    - vt. 触达: Influential have more channels to reach the public(公众). 
-    - vi. 到达: We reach for them mindlessly.
-    - n. 范围: expanded the reach of science.
+    - vt. 触达: Influential([ˌɪnfluˈenʃl] n. 有影响力的人物) have more channels to reach the public(公众).
+    - vi. 到达: We reach for them mindlessly([maɪndləsli] adv. 不费心思地; 愚蠢地).
+    - n. 范围: expanded the reach of science([ˈsaɪəns] n. 科学; 技术).
 - remember
 - simply
-    - adv. 
-    - simple adj. 
+    - adv.
+    - simple adj.
 - stand
-    - vi. 站立；n.立场 vt.容忍
-    - n. 立场: political stand 
+    - vi. 站立；n. 立场 vt. 容忍
+    - n. 立场: political stand
 - stop
-- training
-    - tra-拖着
+- training [ˈtreɪnɪŋ]
     - n. 训练，培养
+    - tra-拖着
     - train n. 火车 v. 训练，培养
 - action
 - beyond
-    - prep. 越出，远于: It is essential to consider factors beyond GDP. 必须考虑GDP以外的因素
-- full 
+    - prep. 越出，远于
+        - It is essential([ɪˈsenʃl]) to consider factors beyond GDP. 必须考虑GDP以外的因素
+- full
     - adj. 满的；完全的
     - fill v. 填满
     - empty, full
@@ -150,64 +155,65 @@
     - speak +语言
     - speak to sb.
     - speak vs say vs talk
-        - say +内容 
+        - say +内容
         - talk
-            - +to/with sb.
+            - talk to/with sb.
             - talk about sth.
         - speak/say/talk Hello
-        - speak/say/talk Chinese 
-        - speak/say/talk about the phenomenon(现象) 
+        - speak/say/talk Chinese
+        - speak/say/talk about the phenomenon([fəˈnɑːmɪnən] 现象)
     - spoke, spoken
     - speaker n. 演讲者，扬声器
 - water
 - act
-    - vi.行动 n.法令
+    - vi. 行动 n. 法令
     - 法案
-        - twenty-seven Acts of Parliament(国会) this field...
-        - parley 会议
+        - twenty-seven Acts of Parliament([ˈpɑːrləmənt] 国会) this field...
+        - parley [ˈpɑrli] 会议
         - party 聚会
 - bad
 - clearly
-    - adv.清楚地；明白地
-    - clear adj.清楚的 v.使...清楚
-- forget 
+    - adv. 清楚地；明白地
+    - clear adj. 清楚的 v. 使...清楚
+- forget
     - you forget to pause and appreciate the things you have. 你忘记了停下来欣赏你所拥有的东西
 - general
     - adj. 普遍的，一般的
     - n. 将军
-    - in general 一般而言: In general, nearly all the students feel good about the class.
+    - in general 一般而言
+        - <u>In general</u>, nearly all the students feel good about the class.
 - together
     - gather n./v. 聚集，集合: They gather all the data the can. 他们收集了所有能收集到的数据
 - underline
     - vt. 强调，使突出: President Trump had underline <u>fossil fuels(化石燃料)</u>.
-    - vt. 下划线: The underline sentence (Para.1) most probably shows that the court.
+    - vt. 下划线: The underline sentence (Para.1) most probably shows that the court([kɔːrt]).
 - record
-    - re-一再  cord 心
-    - n.记录 v.记录；录音
-    - accord v.自愿；一致；符合
+    - n. 记录 v. 记录；录音
+    - re-一再 cord 心
     - n.记录
         - a company's record in CSR
     - v.记录
         - ...record sales on a cash register
+    - accord v. 自愿；一致；符合
 - everyone
 - land
     - n. 陆地
 - message
-    - miss- 送
-        - mission n.使命；天职
-        - Permission n.允许；许可
-        - admission n.承认
-        - submission n.提交
     - n.信息
+    - miss- 送
+        - mission [ˈmɪʃn] n. 使命；天职
+        - permission n. 允许；许可
+        - admission n. 承认
+        - submission n. 提交
 - plant
     - n. 工厂，植物: nuclear power plant 核电厂
     - vt. 种植: People may clear land to plant more rice.
 - reader
 - robot
-- drug
-    - n. 药物 [drʌɡ]
+- drug [drʌɡ]
+    - n. 药物
     - n. 毒品, 与 alcohol(酒精)/tobacco(烟草) 连用
-        - Many homeless adults are addicted to alcohol or drug.
+        - Many homeless adults <u>are addicted([əˈdɪktɪd]) to</u> alcohol or drug.
             - be addicted to 对...上瘾
 - event
     - n. 事件，大事 （= affair） a thing that happens, especially sth **important**
@@ -216,10 +222,10 @@
         - incident: sth that happens, especially sth unusual or **unpleasant**
 - here
 - lever
-    - lev-举；轻
-    - n. 杠杆 
+    - n. 杠杆
     - vt. 撬动
     - Give me a lever and I will lever the earth.
+    - lev-举；轻
 - model
     - n.模特；模型
     - He turned from a problem child into a model student.
@@ -234,21 +240,21 @@
     - sometime adv. 某个时候 adj. 以前的
         - sometime in the future
 - step
-    - n.步；脚步；步骤，措施
+    - n. 步；脚步；步骤，措施
     - n. 措施: take some steps to address(解决) our urgent housing need.
 - task
     - There are a lot of tasks to be done.
 - user
 - practice/practise
-    - n.实践；行为；练习
+    - n. 实践；行为；练习
         - 行为
-            - This practice dose not address the real worry.
+            - This practice does not address the real worry.
 - fear
     - n. 恐惧
     - vt. 害怕: They fear losing control of Mauna Kea.
-- foreign
+- foreign [ˈfɔːrən]
+    - adj. 外国的
     - fore-门
-    - adj. 外国的 [ˈfɔːrən]
     - foreigner n. 外国人
 - within
     - prep. 在（某段距离）之间，在（某段时间）之内
@@ -257,7 +263,7 @@
     - within 表示推测
 - carbon
     - n. 碳
-    - carbon dioxide 二氧化碳
+    - carbon dioxide([daɪˈɑːksaɪd]) 二氧化碳
 - happy
 - hour
     - an hour
@@ -265,7 +271,7 @@
 - moment
     - n. 时刻，瞬间: Think about the present moment.
     - take a moment 花一段时间
-        - We can take a moment before buying.
+        - We can <u>take a moment</u> before buying.
 - nearly
     - adv. 几乎，差不多
 - nothing
@@ -278,7 +284,7 @@
     - on one side 一方面
     - on another side 另一方面
 - town
-    - n.镇，市镇；市区；市中心
+    - n. 镇，市镇；市区；市中心
     - downtown n. 市中心
 - above
     - prep. 在...上方
@@ -290,16 +296,16 @@
 - along
     - prep. 沿着: go along this road
 - behind
+    - prep. 在..后面，落后于
     - hind-在...之后
         - hinder 阻碍
-    - prep. 在..后面，落后于
 - death
     - n. 死亡
     - die
-    - dying n. 濒临死亡: modern medicine has prolonged the physical agony of dying.
+    - dying n. 濒临死亡: modern medicine has prolonged the physical agony([ˈæɡəni]) of dying.
 - doctor
+    - n. 医生；博士
     - doc=duc 引导
-    - n.医生；博士
     - doctor degree([dɪˈɡriː]) 博士学位
     - Dr. Song
 - gain
@@ -314,7 +320,7 @@
     - moonlight 月光
     - sunlight 日光
     - streetlight 街灯
-    - slight adj. 轻微的
+    - slight [slaɪt] adj. 轻微的
     - enlighten v. 启发
     - highlight v. 强调
     - lightly adv. 轻柔地，轻微地
@@ -322,7 +328,7 @@
 - recently
     - adv. 最近: The Labour party(劳动党) had recently announced...
 - sound
-    - adj. 合理的，健全的: The court's ruling is legally sound. 法院的裁决在法律上是合理的
+    - adj. 合理的，健全的: The court's([kɔːrt]) ruling is legally([ˈliɡlɪ]) sound. 法院的裁决在法律上是合理的
 - sport
 - television/TV
     - n.电视机
@@ -333,13 +339,13 @@
 - usually
     - adv. 通常地
     - usual adj.
-- whole 
+- whole
     - adj. 全部的，全体的，完整的
     - n. 全部，全体
     - wholesale n. 批发
     - holy adj.神圣的
 - across
-    - prep.穿过，在...对面 adv.横过
+    - prep. 穿过，在...对面 adv. 横过
         - It helps spread Hawaiian culture across the world.
     - cross v.穿过
         - Look left and right before you cross the road.
@@ -349,16 +355,17 @@
     - adv.其他，另外
     - 只能放在不定代词(sb./anybody/anyone)和特殊疑问词后: Everybody else loses.
 - hear
-    - vt.听见；听说
+    - vt. 听见；听说
     - hear from 收到...的信: I am looking forward to hearing from you.
     - hear about/of 听说: What's this I hear about you getting married?
 - daily
 - due
     - adj. 到期的: interest due 到期利息
     - adj. 应得的，应支付的: Information protection should be given due attention. 信息保护应得到应有的重视
-    - **due to == because of 由于**: a rise in airline travel due to the improving economy and low oil price. 经济好转和油价低迷导致航空旅行增加
+    - **due to == because of 由于**: a rise in airline travel due to the improving economy and low oil price.
+      经济好转和油价低迷导致航空旅行增加
 - key
-    - n.钥匙；关键；键；adj.主要的 vt.键入数据等（key in）
+    - n. 钥匙；关键；键；adj. 主要的 vt. 键入数据等（key in）
     - 关键
         - The key to reforming（改革）higher education...
     - 输入，键入
@@ -368,9 +375,9 @@
     - n.材料；原料
         - They were built with materials popular at that time.它们是用当时流行的材料建造的
     - adj.物质的
-        - satisfaction with these material purchases wears off fairly quickly.
+        - satisfaction([ˌsætɪsˈfækʃn]) with these material purchases([ˈpɜːrtʃəs]) wears off fairly quickly.
             - wear off 逐渐消失；消散
-    - pattern 模式
+    - pattern [ˈpætərn] 模式
 - push
 - shop
 - slow
