--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -1,13 +1,13 @@
 # p36-p38
 
 - fare
-    - pad- 脚，足
     - n. （交通的）费用，票价
+    - pad- 脚，足
     - ...another increase to rail passenger fares
-    - 区别：fee  支付的专业的费用，可数
+    - 区别：fee 支付的专业的费用，可数
         - Higher tuition fees for undergraduate studies.
 - settler
-    - n. 移民；殖民者
+    - n. 殖民者；移民
         - the early settlers of Massachusetts Bay
     - settle v. **解决，处理，定居**；结束争论
         - It will settle the prior controversies.
@@ -15,77 +15,84 @@
     - adv. 极度；非常
 - flag
     - n.旗帜，旗
-- **petrol**/gasoline/gasolene
+- **petrol**/gasoline/gasolene [ˈpetrəl]
     - n. 汽油
     - peter- 石头
 - earnings
-    - n. （工作获得的）薪水，收入
-    - wage 短期的薪水
-    - salary 长期的薪水
-    - income 工作，投资获得的薪水
+    - n. 薪水，收入
+    - wage vs salary vs income vs earnings
+        - wage 短期的薪水
+        - salary 长期的薪水
+        - income 工作，投资获得的薪水
+        - earnings 工作获得的薪水
 - sir
 - hungry
     - adj. 饥饿的
     - hunger n. 饥饿；渴望（hunger for）
-        - ...their great hunger for tech talent
+        - ...their great <u>hunger for</u> tech talent
     - hangry 饿怒症
 - tall
     - adj. 高的，身材高的
 - heavily
     - adv. 很大程度上；大量地
 - reproduce
-    - v. 复制，**再现**；繁殖，生殖
-    - reproduciable 再现的
-        - Our science is both meaningful and reproduciable.
+    - v. **再现**，复制；繁殖，生殖
+    - reproducible 再现的
+        - Our science is both meaningful and reproducible.
     - produce v. 生产，制造
-        - The country produces only about 60 precent of the food.
+        - The country produces only about 60 percent of the food.
 - outdated
 - hunger
-- calorie/calory
+- calorie/calory [ˈkæləri]
     - n. 卡路里
     - caloric adj. 卡路里的
         - I need to increase my daily caloric intake.
-- oxygen
-- lottery
+- oxygen [ˈɑːksɪdʒən]
+    - n. 氧，氧气
+- lottery [ˈlɑːtəri]
     - n. 彩票；碰运气的事
-- vessel
+- vessel [ˈvesl]
     - n. **穿，舰；血管**；容器
     - Today's vessel can find their prey using satellites and sonar.
     - blood vessel
 - backyard
     - n. 后院
 - outsider
-    - n. 外人；门外汉；局外人
-- pearl
+    - n. 门外汉；外人；局外人
+- pearl [pɜːrl]
+    - n. 珍珠
     - pea- 豆子
-    - n. 珍珠；
     - pearly adj. 珍珠的
 - instant
     - adj. 立即的，紧急的；速溶的
-    - It is fully capable of being restored in an instant.
-        - be capable of 能够
+    - It <u>is</u> fully <u>capable of</u> being restored in an instant.
+        - be capable of + doing 能够
     - instantly adv. 立刻，马上
+    - install
 - happily
-- wallet
-- dare
-    - vt. 敢于，敢（dare to do）； modal v.（表示人的感情） 敢 + 动词原形
+- wallet [ˈwɑːlɪt]
+- dare [der]
+    - vt. 敢于，敢（dare to do）； modal v.（表示人的感情）敢 + 动词原形
     - I dare not tell him.
     - Dare to be different，please don't smoke!
-- steal
+- steal [stiːl]
     - vi. 偷，行窃； vt. 偷盗，窃取
-        - Dishonest person might be able steal from someone else's accounts
+    - Dishonest person might be able to steal from someone else's accounts
     - steal - stole - stolen
     - stalk v. 偷偷接近，跟踪
 - afraid
     - adj. 害怕的
-    - be afraid of 
+    - be afraid of
 - mountain
 - loud
     - adj. 大声的，吵闹的
 - entry
     - n. 参赛的人，进入，入口
-- dirty
+- additional
+    - adj. 附加的，添加的
+- dirty [ˈdɜːrti]
     - adj. 肮脏的，下流的，卑鄙的
+    - dirt
 - dance
 - inch
     - n. 英寸
@@ -95,155 +102,175 @@
     - adj. 中世纪的
 - readership
     - n. 全体读者
+    - -ship 表示一个集体或一个关系
 - fancy
-    - vt. 喜欢；想象 n. **想象力；幻想**
+    - n. **想象力；幻想** vt. 喜欢；想象
     - You'll sometimes change your mind about what you fancy.
 - bubble
     - n. 泡泡，水泡
 - grateful
+    - adj. 感激的，感谢的
     - grat- 感激，高兴
         - gratitude n. 感激，感谢
-    - adj. 感激的，感谢的
     - be grateful to sb. for sth. 因某事而感激某人
-        - We are particularly grateful to him for his timely help.
+        - We <u>are particularly</u> grateful <u>to him for</u> his timely help.
 - dot
     - n. 点； vt. 点缀，打点与
-- pave
+- pave [peɪv]
     - vt. 铺路，铺筑
-        - Pave your own unique path.
+    - Pave your own unique path.
     - cave 山洞
     - wave 波动
     - 住在山洞cave，用脚铺路pave；看到水流wave
 - fool
-    - n. 笨蛋； vt. **愚弄**
+    - vt. **愚弄** n. 笨蛋
     - foolish adj. 愚蠢的；荒谬的
-- nationally
+- nationally [ˈnæʃənlɪ]
     - adv. 全国性地；与某国相关 地
-    - nation n. 国家
-    - National adj. 国家的
+    - nation [ˈneɪʃn] n. 国家
+    - national adj. 国家的
     - nature 自然，本质
     - internationally adv. 国际上地
 - seventeen
 - lesson
-    - lect=less- 说
-    - n. 课，（pl. ）课程；**教训**
+    - n. **教训**；课，（pl. ）课程
+    - lect- == less- 说
+        - lecture
     - 教训
-        - We can choose to <u>look for</u>(吸取) the lesson we're meant to learn.
+        - We can choose to <u>look for(吸取)</u> the lesson we<u>'re meant to</u> learn.
             - be meant to 要去，应该
 - dietary
     - adj. 与饮食有关的；饮食的
+    - diet
 - eighty
-- quarrel
+- quarrel [ˈkwɑːrəl]
     - n. 争吵，不和
     - oral adj. 口头的
 - repair
     - vt. 修理，修补
 - makeup
-    - n. 化妆品；**组成，结构**；天性
-    - make up **组成**；构成；**编造**；化妆
-        - The homeless make up <u>a growing percentage of</u>（越来越多的） America's population.
-- precious
+    - n. **组成，结构**；化妆品；天性
+    - make up **组成**；**编造**；构成；化妆
+        - The homeless make up <u>a growing percentage of(越来越多的)</u> America's population.
+        - 越来越多的
+            - more and more
+- precious [ˈpreʃəs]
     - adj. 珍贵的，贵重的
 - flower
     - n. 花
 - nod
     - vt./n. 点头
-    - Executives （who don't get the nod ）also may wish to move on.
-- clinic
+    - Executives (who don't get the nod) also may wish to move on.
+- clinic [ˈklɪnɪk]
     - n. 门诊部，诊所
     - clin- 倾斜
         - decline 下降
-- forum
+        - incline
+- forum [ˈfɔːrəm]
     - n. 论坛，讨论会
-- annually
+    - National Immigration Forum.
+    - World Economic Forum.
+- annually [ˈænjʊəlɪ]
     - adv. 一年一次地
+    - ann- 年
+    - annual
 - countryside
     - n. 农村
 - soup
-- unattractive
+- unattractive [ˌʌnəˈtræktɪv]
     - adj. 不悦目的，不漂亮的
-    - attract v. 吸引，使... 喜爱
+    - attract [əˈtrækt] v. **吸引**，使...喜爱
     - attractive adj. 有吸引力的，漂亮的
 - hopefully
 - foreigner
 - cute
-- seemingly
+    - adj. 漂亮迷人的; 有性吸引力的; 精明的
+- seemingly [ˈsiːmɪŋli]
     - adv. 表面上，看上去
 - warehouse
     - n. 仓库，货栈
-- likehood
+- likelihood
     - n. 可能，可能性
-- bulk
+- bulk [bʌlk]
     - n. 大块；大部分
-    - the bulk of a day 
+    - the bulk of a day
 - frank
     - adj. 坦率的，直率的
     - to be frank 坦诚的说
     - Frank 法拉克人
-- mystery
+- mystery [ˈmɪstəri]
     - n. 神秘性，神秘的事或人
 - mild
     - adj. 温和的；温暖的
+    - wild
 - slogan
     - n. 标语，口号
-- shy
+- shy [ʃaɪ]
     - adj. 腼腆的；胆怯的； vi. 惊退
 - ball
-- irony
-    - n. 反语，讽刺
-    - 作者态度题为必错选项
-- iron
+- iron [ˈaɪərn]
     - n. 铁，烙铁； v. 熨，烫
     - iron man 钢铁侠
-    - ironic adj. 反语的；讽刺的
-        - ironic man 讽刺侠
-- fabric
+- ironic [aɪˈrɑnɪk]
+    - adj. 反语的；讽刺的
+    - ironic man 讽刺侠
+- irony [ˈaɪrəni]
+    - n. 反语，讽刺
+    - 作者态度题为必错选项
+- fabric [ˈfæbrɪk]
     - n. 织物，织品；构造，结构
-    - social fabric 社会结构 = social structure
+    - social fabric == social structure 社会结构
     - fabricate 编造
         - ...fabricate their date
 - hello
-- troop
-    - n. 军队（常pl. 表示个体），一群，一大批
-    - army 军队（整体）
-- textile
+- troop [truːp]
+    - n. 军队(常pl.)，一群，一大批
+    - army vs troop
+        - army 军队，表示整体
+        - troops 表示个体
+    - group
+- textile [ˈtekstaɪl]
     - n.纺织品；纺织业（pl.）
 - nearby
     - adj. 附近的； adv. 在附近
+    - nearly adv. 几乎; 差不多
 - excellent
     - adj. 优秀的，卓越的
 - unfold
 - upper
-- dome
+    - adj. 较高的，上面的; 上部的
+- dome [doʊm]
     - n. 圆屋顶
 - palace
     - n. 宫殿；豪华住宅
 - metric
     - adj. **公制的；米制的**； n.（pl.） 度量工具
     - metre/meter n.米
-- carve
+- carve [kɑːrv]
     - vt. 雕刻；把...切碎
     - The new land was carved into 13 states，including three slave states.
 - twin
     - n. 双胞胎； adj. 孪生的
 - elder
     - adj. 年龄大的，年长的； n.（pl. ）长者，长辈
-- kick
+    - older
+- kick [kɪk]
     - vt. 踢； n. 踢，极大的乐趣
     - kick out 踢出去
         - ...brand them as aliens to be kicked out
-    - kick back 休息
+    - kick back == relax 休息
         - Their home is also a place for kicking back.
 - rank
     - n. 等级，排； vt. 把...分等级；排列
-        - Last year，he was ranked second in his age group.
+    - Last year，he was ranked second in his age group.
     - range n. 范围，排序
+        - orange
 - calendar
     - n. 日历，日程表
     - the lunar calendar 农历
     - the solar calendar 公历
 - bedroom
-- knight
+- knight [naɪt]
     - n. 骑士
     - the dark knight 黑夜骑士
 - goodwill
@@ -252,24 +279,27 @@
     - n. 恐慌，惊慌； v. 使恐慌
 - roast
     - v. 烤； n. 烤肉； adj. 烤过的
-        - It is not telling people to cut out roast foods entirely.
+    - It is not telling people to cut out roast foods entirely.
     - toast 吐司
-- grower
+- grower [ˈgroʊə(r)]
     - n. 种植者，栽培人，种植公司
 - damn
     - adj. 该死的，可恶的（消极）； adv. 非常
     - There is too much damn happiness in the world today.
-- erase
+- erase [ɪˈreɪs]
     - vt. 擦除，抹除
-        - ...to ensure that phone data are not erased or altered...
-    - eraser n. 橡皮
-- purly
+    - ...to ensure that phone data are not erased or altered(改变)...
+    - eraser [ɪˈreɪsər] n. 橡皮
+- purely [ˈpjʊrli]
+    - adv. 完全地，十足地; 纯粹地;
 - enjoyable
+    - adj. 有乐趣的; 令人愉快的
 - slim
     - adj. 苗条的；纤细的
-- cabin
+- cabin [ˈkæbɪn]
     - n. 机舱，船舱；小木屋
-- radar
+    - cab n. 出租车; 驾驶室/座
+- radar [ˈreɪdɑːr]
     - n. 雷达
     - They located the ship by radar.
 - entrance
@@ -280,24 +310,34 @@
     - v. 冻结，结冰； n. 结冰
 - roll
     - v. 滚动；卷
-- clever
-    - adj. 聪明的，机灵的；**巧妙的；精巧的**
+- clever [ˈklevər]
+    - adj. **巧妙的；精巧的**；聪明的，机灵的
     - ...come up with clever new products for their factories to make.
-- excited
-    - adj. 激动的，兴奋的（修饰人）
-    - exciting adj. 激动的（修饰物）
-    - excit  v. 使激动
+- excited [ɪkˈsaɪtɪd]
+    - adj. 激动的，兴奋的
+    - exciting adj. 激动的
+    - exciting vs excited
+        - exciting 修饰物
+        - excited 修饰人
+    - excite v. 使激动
     - cite- 引用；唤起
-- blood
+- blood [blʌd]
     - n. 血液
     - bleed v. 流血
 - keyword
-- quarterly
+- quarterly [ˈkwɔːrtərli]
     - adj. 极度的；每季的
 - golden
     - adj. 金制的；金色的
-- bacterial
+- bacterial [bæk'tɪərɪrl]
     - adj. 细菌的
     - The medicine is useful for bacterial infection.
 - raw
     - adj. 生的，未加工的；无经验的
+- cup
+- rice
+- thick [θɪk]
+    - adj. 浓的，茂密的; 厚的，粗大的; 稠密的; 不透明的
+    - adv. 密集地; 不清晰地; 〈口〉太过分; 频频地，时常
+- mayor [ˈmeɪər]
+    - n. 市长，镇长; 郡长
